--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "PFG",
-  "name": "Pol_Fat_Guys",
+  "short_name": "DPKNFT",
+  "name": "DogeInu Punk",
   "icons": [
     {
       "src": "favicon.ico",
