--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "DPKNFT",
-  "name": "DogeInu Punk",
+  "name": "DogeInuPunks",
   "icons": [
     {
       "src": "favicon.ico",
